# cairo-rs-py-playground

./: .gitignore  .gitmodules  README.md  pyproject.toml
contracts/: account.cairo  simple-new.cairo  simple-old.cairo
scripts/: compile-contracts.sh  convert_new_to_old.py  initialize-compilers.sh  rebuild_cairo_rs_py.sh  run.sh
src/: __main__.py
starknet_0_9_1/: pyproject.toml
